[package]
name = "qjs-derive-support"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
proc-macro2 = "0.4"
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"

[dev-dependencies]
pretty_env_logger = "0.3"
matches = "0.1"
if_chain = "1.0"
