[package]
name = "qjs-derive-support"
version = "0.1.1"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
if_chain = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
pretty_env_logger = "0.3"
matches = "0.1"
