[package]
name = "qjs-derive"
version = "0.1.1"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Macros 1.1 implementation of qjs macros"
repository = "https://github.com/flier/rust-quickjs"
license = "MIT"
keywords = ["javascript", "quickjs"]
categories = ["api-bindings"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
log = "0.4"
stderrlog = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-hack = "0.5"

qjs-derive-support = { version = "0.1", path = "../qjs-derive-support" }

[dev-dependencies]
qjs = { version = "0.1", path = ".." }
