[package]
name = "quickjs-sys"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gen = ["bindgen"]

[dependencies]
cfg-if = "0.1"

[build-dependencies]
failure = "0.1"
lazy_static = "1.3"
bindgen = { version = "0.50", optional = true }
