[package]
name = "quickjs-sys"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bignum", "lto", "dump_leaks"]
bignum = []
lto = []
gen = ["bindgen"]
dump_free = []
dump_closure = []
dump_gc = []
dump_gc_free = []
dump_leaks = []
dump_objects = []
dump_atoms = []
dump_shapes = []
dump_module_resolve = []
dump_promise = []
dump_read_object = []

[dependencies]
cfg-if = "0.1"

[build-dependencies]
failure = "0.1"
lazy_static = "1.3"
bindgen = { version = "0.50", optional = true }
